# LearnOpenCV

LearnOpenCV/: CMakeLists.txt  main.cpp
LearnOpenCV/include/: LearnOpenCV.h
LearnOpenCV/src/: LearnOpenCV.cpp
Project00/: .main.cpp.swp  CMakeLists.txt  main.cpp
Project01/: CMakeLists.txt  main.cpp
Project02/: main.cpp
test/: CMakeLists.txt  main.cpp
计算机视觉开发实战/Class1/: .main.cpp.swp  CMakeLists.txt  main.cpp
计算机视觉开发实战/Class2/: CMakeLists.txt  main.cpp
计算机视觉开发实战/Class2/include/: quickopencv.h
计算机视觉开发实战/Class2/src/: quickdemo.cpp
计算机视觉开发实战/chapter2.5/: CMakeLists.txt  test.cpp
调整图像亮度/: CMakeLists.txt  main.cpp
调整图像对比度/: CMakeLists.txt  main.cpp
